# spdlog_setup

./: .gitignore  CMakeLists.txt  conanfile.py
include/spdlog_setup/details/: conf_impl.h
src/unit_test/: CMakeLists.txt  examples.h  unit_test.cpp
